<resources>
    <string name="action_settings">Settings</string>
    <string name="wfa101">یہ ایک سوال ہے ؟</string>
    <string name="Q_wfa101">Q. WFA101</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="sectionaidentificationinformationhh_mainheading">Section A: Identification Information (HH): Section A: Identification Information (HH)</string>
    <string name="hh01">Date of interview</string>
    <string name="hh02">Time of Interview</string>
    <string name="hh0201">Hours</string>
    <string name="hh0202">Minutes</string>
    <string name="hh03">Code of Interviewer</string>
    <string name="hh04">Name of Interviewer</string>
    <string name="hh05">Name of District</string>
    <string name="hh0501">Peshawar</string>
    <string name="hh0502">Lakki Marwat</string>
    <string name="hh0503">Quetta</string>
    <string name="hh06">Union Council </string>
    <string name="hh07">Block, Street, Colony, Village Name</string>
    <string name="hh08">Cluster Number</string>
    <string name="hh09">Household number</string>
    <string name="hh10">Complete Address including landmark</string>
    <string name="hh11">Before progressing, take consent; did you get permission? If permission was not granted, stop interviewing and proceed to the next household.</string>
    <string name="hh1101">Yes, permission is granted</string>
    <string name="hh1102">No, permission is denied</string>
    <string name="hh12">Name of respondent</string>
    <string name="hh13">Age of respondent (In Years) (Minimum age: 18 years)</string>
    <string name="hh14">Gender of respondent</string>
    <string name="hh1401">Male</string>
    <string name="hh1402">Female</string>
    <string name="hh15">Literacy level of respondent: Now I would like you to read this sentence to me. SHOW CARD TO RESPONDENT If respondent cannot read whole sentence, PROBE: Can you read any part of the sentence to me?</string>
    <string name="hh1501">Cannot Read at All</string>
    <string name="hh1502">Able to Read Only Part of The Sentence</string>
    <string name="hh1503">Able to Read Whole Sentence</string>
    <string name="hh1504">No Card With required language</string>
    <string name="hh1505">Blind/Visually Impaired</string>
    <string name="hh16">Qualification of respondent Mention completed years of education; Code: 55 for uneducated, 17 for Professional and 22 for only religious studies </string>
    <string name="hh17">Profession of Respondent (Use Below Codes)</string>
    <string name="hh1701">Professional/technical/managerial</string>
    <string name="hh1702">Clerical</string>
    <string name="hh1703">Business</string>
    <string name="hh1704">Sales and services </string>
    <string name="hh1705">Skilled manual </string>
    <string name="hh1706">Unskilled manual</string>
    <string name="hh1707">Domestic service</string>
    <string name="hh1708">Agriculture</string>
    <string name="hh1709">Student</string>
    <string name="hh1710">Unemployed</string>
    <string name="hh1711">Homemaker</string>
    <string name="hh1712">Retired</string>
    <string name="hh1713">Housewife</string>
    <string name="hh1796">Others Please Specify</string>
    <string name="hh18">Is respondent the head of household?</string>
    <string name="hh1801">Yes, Head of household</string>
    <string name="hh1802">No, Other Member</string>
    <string name="hh19">Name of Head of Household</string>
    <string name="hh20">Profession of head of household (Use Below codes)</string>
    <string name="hh2001">Professional/technical/managerial</string>
    <string name="hh2002">Clerical </string>
    <string name="hh2003">Business</string>
    <string name="hh2004">Sales and services </string>
    <string name="hh2005">Skilled manual</string>
    <string name="hh2006">Unskilled manual</string>
    <string name="hh2007">Domestic service</string>
    <string name="hh2008">Agriculture</string>
    <string name="hh2009">Student</string>
    <string name="hh2010">Unemployed</string>
    <string name="hh2011">Homemaker</string>
    <string name="hh2012">Retired</string>
    <string name="hh2013">Housewife</string>
    <string name="hh2096">Others Please Specify</string>
    <string name="hh21">Total members</string>
    <string name="hh22">Male members including male children of all ages</string>
    <string name="hh23">Female members including female children of all ages</string>
    <string name="hh24">Number of under-five children - Male</string>
    <string name="hh25">Number of under-five children - Female</string>
    <string name="hh26">Result of Interview</string>
    <string name="hh2601">Completed</string>
    <string name="hh2602">Partially completed</string>
    <string name="hh2603">Refused</string>
    <string name="hh2604">No eligible respondent available</string>
    <string name="hh2605">Locked</string>
    <string name="hh2606">Household not found</string>
    <string name="hh2696">Other specify</string>
    <string name="cb01">Line no</string>
    <string name="cb02">Name</string>
    <string name="cb03">Gender</string>
    <string name="cb0301">Male</string>
    <string name="cb0302">Female</string>
    <string name="cb04">Date of Birth</string>
    <string name="cb04dd">Days</string>
    <string name="cb04mm">Months</string>
    <string name="cb04yy">Year</string>
    <string name="cb05">Age</string>
    <string name="cb0501">Year</string>
    <string name="cb0502">Months</string>
    <string name="cb06">Relationship with respondent</string>
    <string name="cb0601">Mother</string>
    <string name="cb0602">Father</string>
    <string name="cb0603">Primary Caretaker  (not parents)</string>
    <string name="cb0696">Other childInformation member</string>
    <string name="cb07">Name of Mother</string>
    <string name="cb08">Age</string>
    <string name="cb09">Education</string>
    <string name="cb10">Profession</string>
    <string name="cb11">Mother is Available?</string>
    <string name="cb1101">Yes</string>
    <string name="cb1102">No</string>
    <string name="cb12">Name of father</string>
    <string name="cb13">Education</string>
    <string name="cb14">Profession</string>
    <string name="cb15">Birth weight (kg)</string>
    <string name="cb16">Was this birth registered? If yes with? </string>
    <string name="cb1601">Not registered</string>
    <string name="cb1602">NADRA</string>
    <string name="cb1603">LHW</string>
    <string name="cs01">Child’s Line No</string>
    <string name="cs02">Name of Child</string>
    <string name="cs03">Has the child had diarrhea in the last two weeks?</string>
    <string name="cs0301">Yes</string>
    <string name="cs0302">No</string>
    <string name="cs04">How much was given to drink to the child during the diarrhoea episode?</string>
    <string name="cs0401">Much Less</string>
    <string name="cs0402">Somewhat Less </string>
    <string name="cs0403">About The Same</string>
    <string name="cs0404">More</string>
    <string name="cs0405">Nothing To Drink</string>
    <string name="cs0498">Don\'t Know</string>
    <string name="cs05">How much was given to eat to the child during the diarrhoea episode? </string>
    <string name="cs0501">Much Less</string>
    <string name="cs0502">Somewhat Less</string>
    <string name="cs0503">About The Same </string>
    <string name="cs0504">More</string>
    <string name="cs0505">Never Gave Food </string>
    <string name="cs0598">Don\'t Know</string>
    <string name="cs06">Did you seek advice or treatment for the diarrhoea from any source?</string>
    <string name="cs0601">Yes</string>
    <string name="cs0602">No</string>
    <string name="cs07">Where did you seek advice or treatment for diarrhoea?</string>
    <string name="title1">Public Sector</string>
    <string name="cs0701">Govt. Hospital</string>
    <string name="cs0702">RHC/MCH</string>
    <string name="cs0703">BHU</string>
    <string name="cs0704">Lady Health Worker</string>
    <string name="cs0706">Hospital/Clinic</string>
    <string name="cs07961">Other Public Sector</string>
    <string name="titel2">Private Sector </string>
    <string name="cs0707">Medical Store </string>
    <string name="cs0708">Pvt. Doctor</string>
    <string name="cs0709">Homeopath</string>
    <string name="cs0710">Dispenser / Compounder</string>
    <string name="cs0711">Hakim</string>
    <string name="cs0712">Dai, TBA</string>
    <string name="cs0713">CMW</string>
    <string name="cs07962">Other Private</string>
    <string name="cs08">What Was Given to Treat Diarrhea?</string>
    <string name="cs0801">ORS</string>
    <string name="cs0802">Antibiotic</string>
    <string name="cs0803">Antimotility (anti-diarrhoea) </string>
    <string name="cs0804">Zinc</string>
    <string name="cs0805">Unknown pill or syrup</string>
    <string name="cs0806">Antibiotic</string>
    <string name="cs0807">Non-antibiotic</string>
    <string name="cs0808">Unknown injection</string>
    <string name="cs0809">Intravenous (iv) </string>
    <string name="cs0810">Home remedy /herbal medicine</string>
    <string name="cs0896">Others Please Specify</string>
    <string name="cs09">Why did you not seek treatment?</string>
    <string name="cs0901">Fear of COVID-19</string>
    <string name="cs0902">Confidence that child will get better himself</string>
    <string name="cs0903">Someone you knew advised treatment</string>
    <string name="cs0904">ChildInformation knew management themselves</string>
    <string name="cs0905">Financial reasons</string>
    <string name="cs0906">Limitations of transport</string>
    <string name="cs0996">Others Please Specify</string>
    <string name="cs10">Was the child given ORS? </string>
    <string name="cs1001">Yes</string>
    <string name="cs1002">No</string>
    <string name="cs11">Was the child given Zinc supplements? </string>
    <string name="cs1101">Yes</string>
    <string name="cs1102">No</string>
    <string name="cs12">Has the child been sick with cough in the past two weeks? </string>
    <string name="cs1201">Yes</string>
    <string name="cs1202">No</string>
    <string name="cs13">Has the child been sick with fever in the past two weeks?</string>
    <string name="cs1301">Yes</string>
    <string name="cs1302">No</string>
    <string name="cs14">Has (NAME) had fast, short, rapid breaths or difficulty breathing at any time in the last 2 weeks?</string>
    <string name="cs1401">Yes</string>
    <string name="cs1402">No</string>
    <string name="specify"> Please explain </string>
    <string name="cm0201">Was the visit successful</string>
    <string name="cm020111">Yes</string>
    <string name="cm020112">NO</string>
    <string name="cm0202">If visit is not successful, what was the reason</string>
    <string name="cm020211">Died (Complete a censorship form21cm)</string>
    <string name="cm020212">Permanently moved (Complete a censorship form21cm)</string>
    <string name="cm020213">Withdrawal of participation (Complete a censorship form21cm)</string>
    <string name="cm020214">Could not be contacted despite trying 3 times</string>
    <string name="cm020215">Refused of this visit</string>
    <string name="cm020216">Not living with mother</string>
    <string name="cm020277">Other </string>
    <string name="mm0201">Was the visit successful</string>
    <string name="mm0201011">Yes</string>
    <string name="mm0201012">NO</string>
    <string name="mm202">If visit is not successful, what was the reason</string>
    <string name="mm202011">Complete</string>
    <string name="mm202012">Died (Complete a censorship)</string>
    <string name="mm202013">Permanently moved (Complete a censorship)</string>
    <string name="mm202014">Withdrawal of participation (Complete a censorship)</string>
    <string name="mm202015">Could not be contacted despite trying 3 times</string>
    <string name="mm202077">Other </string>
</resources>