<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.amanhicovid_19study.ui.EndingPregsurvActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fldGrpEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- mm0201  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVmm0201"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_mm0201" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/mm0201" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/mm0201"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/mm0201011"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm0201011" />

                        <RadioButton
                            android:id="@+id/mm0201012"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm0201012" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!-- status Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvstatus"
                style="@style/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/q_status"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_mm202" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/q_status"
                            android:layout_weight="1"
                            android:text="@string/mm202" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/istatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/istatusa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202011" />

                        <RadioButton
                            android:id="@+id/istatusb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202012" />

                        <RadioButton
                            android:id="@+id/istatusc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202013" />

                        <RadioButton
                            android:id="@+id/istatusd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202014" />

                        <RadioButton
                            android:id="@+id/istatuse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202015" />

                        <RadioButton
                            android:id="@+id/istatus96"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mm202077" />

                        <EditText
                            android:id="@+id/istatus96x"
                            style="@style/EditTextAlpha"
                            android:hint="@string/specify"
                            android:maxLength="40"
                            android:tag="istatus96"
                            android:text='@{istatus96.checked ? istatus96x.getText().toString(): ""}'
                            android:visibility='@{istatus96.checked ? View.VISIBLE : View.GONE}' />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Save" />

            </LinearLayout>
            <!--EndButton LinearLayout-->

        </LinearLayout>

    </ScrollView>

</layout>